update cookie handling

--- a/docs/pages/introduction.mdx
+++ b/docs/pages/introduction.mdx
@@ -63,6 +63,8 @@ You need to set up two environment variables for authentication:
 
    Example: `session_id=abc123xyz; token=def456uvw`
 
+   > 💡 **How to get your session cookie:** Log into your casino API dashboard in your browser, open Developer Tools (F12), go to the Network tab, make a request to your API, and copy the `Cookie` header value from the request headers.
+
 5. Click **"Save"**
 
 > 🔒 **Both values stay private.** Only you can see them in your environment variables. The leaderboard developer will never see your casino API credentials or authentication tokens.
